@@ -5,3 +5,4 @@
 obj-y := tty_io.o
 obj-y += tty_ldisc.o
 obj-y += n_tty.o
+obj-y += n_dummy.o
